# ToText

./: README.md  pyproject.toml
src/app/: app.py
src/training/: concept.ipynb  train.yaml
src/training/etl/: data_downloader.py  eminst_extractor.py  format_yolo.py
